# blockchain-and-security-in-rust

./: README.md  Security_Knowledge_Base.md  decentralization_glossary.md
Rust_Blockchain_Notes/: WHAT_LEARNED_NEW.md
SUI_IKA/: IKA_Whitepaper.md  IKA_summary.md
Verifiable_proofs_ZK_MPC_ETC/: TEE.md  ZK_TEE_Roadmap.md  people.md  risc_zero_summary.md  turnkey_whitepaper.md  zk_course_berkeley.md
Verifiable_proofs_ZK_MPC_ETC/Circom/: sudoku.circom  sudoku.pf.json  sudoku.pk  sudoku.r1cs  sudoku.wtns
advanced_rust/: advanced.md
blockchain_from_scratch/src/: main.rs
joshomdorff-blockchain-from-scratch/: Cargo.toml  Readme.md
joshomdorff-blockchain-from-scratch/src/c1_state_machine/: p1_switches.rs
joshomdorff-blockchain-from-scratch/src/c2_blockchain/: p1_header_chain.rs  p2_extrinsic_state.rs  p3_consensus.rs
security/: cryptography_summary_map.md  secure_chat_summary_part1.md  security_glossary.md
web3dev_blockchain_from_scratch/: Cargo.toml
web3dev_blockchain_from_scratch/src/: balances.rs  lib.rs  main.rs  proof_of_existence.rs  system.rs  systems.rs
zk_mpc_cool_security_innovation/: turnkey_whitepaper.md  zk_course_berkeley.md
zk_mpc_cool_security_innovation/Circom/: sudoku.circom  sudoku.input.json
zk_mpc_cool_security_innovation/zk_send_fund_to_email/: README.md
zk_mpc_cool_security_innovation/zk_send_fund_to_email/dkim_verifier/: Cargo.toml
zk_mpc_cool_security_innovation/zk_send_fund_to_email/dkim_verifier/src/: dkim_key_fetch.rs  errors.rs  lib.rs  main.rs  utils.rs  verifier.rs  verify_dkim.rs  verify_dkim_email.rs
(+5 files in other folders)
