[package]
name = "dkim_verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
hex = "0.4"
regex = "1.11"
log = "0.4.27"
mailparse = "0.16"
once_cell = "1.21"
pkcs1 = "0.7"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
thiserror = "2.0"
trust-dns-resolver = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "rt"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"


[dev-dependencies]
pem = "3.0"